@@ -45,7 +45,13 @@
 
 #include <sched.h>
 
-@class DKWatcher, GSStackTrace;
+/*
+ * Phony interfaces to make the compiler aware of the fact that the private
+ * classes here inherit from NSObject, so that we can call +alloc -init on them
+ * in order to initialize them before starting the worker thread.
+ */
+@interface GSStackTrace : NSObject @end
+@interface DKWatcher : NSObject <RunLoopEvents> @end
 
 @interface DKEndpoint (Private)
 - (void)_mergeInfo: (NSDictionary*)info;
